js güncelleme yapıldı adedi değil adet yazıldı

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <input type="number" name="price" placeholder="Ürün Fiyatı Giriniz">
 
       <label for="color"> Ürün Rengi</label>
-      <input type="text" name="color" placeholder="Ürün REngi Giriniz">
+      <input type="text" name="color" placeholder="Ürün Rengi Giriniz">
 
       <label for="category">Ürün Kategorisi Seçiniz</label>
       <select name="category">
